--- a/classes/templates/groups/list.html
+++ b/classes/templates/groups/list.html
@@ -1,4 +1,5 @@
 {% extends "root/base.html" %}
+{% load static %}
 {% load root_tags %}
 
 
@@ -7,21 +8,43 @@
 {% endblock title %}
 
 {% block content %}
+<style>
+    .position-relative {
+        position: relative;
+        z-index: 1; /* Ensures this container is above the background */
+        color: white;
+    }
+    
+    .position-relative .bg-image {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: url('{% static "img/root/classes/class-header.jpg" %}') center center/cover no-repeat;
+        filter: brightness(30%); /* Dims the image */
+        z-index: -1; /* Places it behind the text content */
+        opacity: 0.85; /* Adjust the dimming further if needed */
+    }    
+</style>
+
 <div class="d-flex justify-content-center align-items-start mt-3 ms-2">
     <div class="ms-3 me-3 mt-3 list-container container-sm border rounded-3">
-        <h1 class="text-center mb-4">My classes</h1>
+        <h1 class="text-center display-2 fs-1 mb-4">My classes</h1>
         <div class="row">
             {% for group in groups %}
                 <div class="col-md-auto col-lg-auto ms-auto me-auto">
-                    <div class="card mb-4 overflow-auto" style="max-height: 400px;">
-                        <div class="card-body">
+                    <div class="card mb-4 overflow-hidden" style="max-height: 400px;">
+                        <div class="card-body position-relative">
                             <h3>
-                                Name: {{ group.name }}
+                                <div class="bg-image rounded-4"></div>
+                                <h1 class="display-1 fs-1">{{ group.name }}
                                 <a href = "{% url 'group-detail' pk=group.pk %}">
                                     <i class="bi bi-eye bi-primary"></i>
                                 </a>
+                                </h1>
+                                <text class="display-4 fs-6">{{group.students.count}} student(s), teacher: {{ group.teacher.first_name}} {{ group.teacher.last_name}}</text>
                             </h3>
-                            <h4>Course: {{ group.course.name }} ({{ group.course.modules.count }} module(s), {{ group.course.modules|total_lessons }} lesson(s))</h4>
                         </div>
                     </div>
                 </div>
