--- a/root/templates/admin/class_manager.html
+++ b/root/templates/admin/class_manager.html
@@ -9,7 +9,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <button class="btn btn-outline-primary mb-2 rounded-pill" data-bs-toggle="modal" data-bs-target="#createClassModal">
+        <button class="btn btn-primary mb-2 rounded-pill" data-bs-toggle="modal" data-bs-target="#createClassModal">
           <small>Add new class</small>
         </button>
         
@@ -20,7 +20,7 @@
               <strong>@{{ class.name }}</strong> <small>{{ class.course.name }}</small>
               (@{{ class.teacher.username }}, {{ class.students.count }} students)
             </p>
-            <button class="btn btn-outline-success rounded-pill update-btn" 
+            <button class="btn btn-gradient rounded-pill update-btn" 
               data-id="{{ class.id }}" 
               data-name="{{ class.name }}" 
               data-desc="{{ class.desc }}" 
@@ -78,7 +78,7 @@
                     <option value="{{ student.id }}">{{ student.username }}</option>
                     {% endfor %}
                   </select>     
-                  <button type="submit" class="btn btn-primary w-100">Create</button>
+                  <button type="submit" class="btn btn-primary rounded-pill w-100">Create</button>
               </form>
           </div>
       </div>
@@ -117,7 +117,7 @@
                     <option value="{{ student.id }}">{{ student.username }}</option>
                     {% endfor %}
                   </select>                
-                  <button type="submit" class="btn btn-success w-100">Update</button>
+                  <button type="submit" class="btn btn-gradient rounded-pill w-100">Update</button>
               </form>
           </div>
       </div>
@@ -136,7 +136,7 @@
               <p>Are you sure you want to delete "<strong id="delete-class-name"></strong>"?</p>
               <form id="delete-class-form" method="POST" action="">
                 {% csrf_token %}
-                <button type="submit" class="btn btn-danger">Delete</button>
+                <button type="submit" class="btn btn-danger rounded-pill">Delete</button>
               </form>            
           </div>
       </div>
