--- a/root/templates/admin/roles.html
+++ b/root/templates/admin/roles.html
@@ -9,7 +9,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <button class="btn btn-outline-primary mb-2 rounded-pill" data-bs-toggle="modal" data-bs-target="#createRoleModal">
+        <button class="btn btn-primary mb-2 rounded-pill" data-bs-toggle="modal" data-bs-target="#createRoleModal">
           <small>Add new role</small>
         </button>
         
@@ -20,7 +20,7 @@
               <strong>@{{ user.username }}</strong> <small>{{ user.first_name }} {{ user.last_name }}</small>
               ({{ user.role.first.get_role_display }})
             </p>
-            <button class="btn btn-outline-success rounded-pill update-btn" 
+            <button class="btn btn-gradient rounded-pill update-btn" 
               data-id="{{ user.role.first.id }}" 
               data-user-id="{{ user.id }}"
               data-role="{{ user.role.first }}" 
@@ -67,7 +67,7 @@
                       <option value="teacher">Teacher</option>
                       <option value="student">Student</option>
                   </select>  
-                  <button type="submit" class="btn btn-primary w-100">Create</button>
+                  <button type="submit" class="btn btn-primary rounded-pill mt-2 w-100">Create</button>
               </form>
           </div>
       </div>
@@ -98,7 +98,7 @@
                       <option value="teacher">Teacher</option>
                       <option value="student">Student</option>
                   </select>                 
-                  <button type="submit" class="btn btn-success w-100">Update</button>
+                  <button type="submit" class="btn btn-gradient rounded-pill w-100">Update</button>
               </form>
           </div>
       </div>
@@ -117,7 +117,7 @@
               <p>Are you sure you want to delete this role?</p>
               <form id="delete-role-form" method="POST" action="">
                 {% csrf_token %}
-                <button type="submit" class="btn btn-danger">Delete</button>
+                <button type="submit" class="btn btn-danger rounded-pill">Delete</button>
               </form>            
           </div>
       </div>
