--- a/root/templates/auth/signup.html
+++ b/root/templates/auth/signup.html
@@ -1,32 +1,28 @@
 {% extends "root/base.html" %}
+{% load static %}
+
 
 {% block title %}
 <title>ROSEFLOURISH - Sign Up</title>
 {% endblock %}
 
 {% block content %}
-<div class="container col-xl-10 col-xxl-8 px-4 py-5">
+<div class="container text-center col-xl-10 col-xxl-8 px-4 py-5">
   <div class="row align-items-center g-lg-5 py-5">
-    <div class="col-lg-4 text-center text-lg-start">
-      <h1 class="display-4 fw-bold lh-1 text-body-emphasis mb-3">Sign Up</h1>
-      <p class="fs-4 text-center">
+      <h1 class="display-4 fw-bold mb-1">
+        <img src="{% static 'img/root/root-icon.png' %}" alt="Project Icon" width="30" height="30">
         Sign Up
+        <img src="{% static 'img/root/root-icon.png' %}" alt="Project Icon" width="30" height="30" class="me-2">
+      </h1>
+      <p class="fs-6 text-center">
+        <small class="text-body-secondary">Already have an account? Then, you can <a href='/login/'>login</a>.</small>
       </p>
-    </div>
-
-    <div class="col-lg-8">
-      <form method="POST" class="p-4 p-md-5 border rounded-3">
+      <form method="POST" class="p-2 p-md-2 border rounded-3">
         {% csrf_token %}
         {{ form.as_p }}
-        <button class="w-100 btn btn-lg btn-primary rounded-pill" type="submit">Sign up</button>
-        <hr class="my-1">
-        <small class="text-body-secondary text-center">By clicking Sign up, you agree to the terms of use.</small>
-        <hr class="my-1">
-        <small class="text-body-secondary justify-items-center">
-          Already have an account? Then, you can <a href='/login/'>login</a>.
-        </small>
+        <button class="w-50 btn-lg btn btn-gradient rounded-pill" type="submit">Sign Up</button>
       </form>
+      <small class="text-body-secondary text-center">By clicking Sign up, you agree to the terms of use.</small>
     </div>
-  </div>
 </div>
 {% endblock content %}
