--- a/root/templates/comp/footer.html
+++ b/root/templates/comp/footer.html
@@ -1,14 +1,12 @@
 {% load static %}
 
 <div class="container">
-    <footer>
       <hr class="border border-secondary">
-      <p class="text-left text-body-secondary display-6 fs-6">
-        <img src="{% static 'img/bs/bootstrap-ico.png' %}" alt="Bootstrap Icon" width="30" height="25" class="me-0" style="filter: grayscale(100%);">
-        <img src="{% static 'img/dj/django-ico.png' %}" alt="Django Icon" width="20" height="25" class="" style="filter: grayscale(100%);">
+      <p class="text-start text-body-secondary display-6 fs-6">
         <b>ROSEFLOURISH</b> <br>
-        <small style="font-size: 14px">&copy; All rights reserved • Sawada • 250216w7 • Render Hosting
-        </small>
+        <small style="font-size: 12px">&copy; All rights reserved • Sawada • 250216w7 • Render Hosting
+        </small> <br>
+        <img src="{% static 'img/bs/bootstrap-ico.png' %}" alt="Bootstrap Icon" width="25" class = "me-2" height="20" style="filter: grayscale(100%);">
+        <img src="{% static 'img/dj/django-ico.png' %}" alt="Django Icon" width="15" height="20" style="filter: grayscale(100%);">
       </p>
-    </footer>
-  </div>
+</div>
