--- a/root/templates/root/forum.html
+++ b/root/templates/root/forum.html
@@ -11,21 +11,19 @@
         <div class = "card-body p-3">
             <form method="POST" enctype = "multipart/form-data" class="d-flex align-items-center">
                 {% csrf_token %}
-                <div class="flex-grow-1 mt-3">
+                <div class="flex-grow-1 mt-1">
                     {{ messages_form.as_p }}
                 </div>
-                <div class="justify-items-center ms-3">
-                    <label for="{{ messages_form.media.id_for_label }}" class="btn btn-primary">
+                <div class="align-self-center ms-3">
+                    <label for="{{ messages_form.media.id_for_label }}" class="btn btn-outline-primary rounded-pill">
                         <i class="bi bi-paperclip"></i>
                     </label>
                     {{ messages_form.media }}
-                </div>
-                <div class = "justify-items-center">
-                    {% if user.is_authenticated %}
-                        <button class="btn btn-primary ms-2" type="submit"><i class="bi bi-send"></i></button>
-                    {% else %}
-                        <button class="btn btn-primary ms-2" type="submit" disabled><i class="bi bi-send"></i></button>
-                    {% endif %}
+
+                    <label for="submit-btn" class="btn btn-primary rounded-pill ms-1">
+                        <i class="bi bi-send"></i>
+                    </label>
+                    <button id="submit-btn" class="d-none" type="submit"></button>
                 </div>
             </form>
             <div class="overflow-auto" style="max-height: 400px;">
@@ -42,7 +40,7 @@
                                 <img class="rounded-5" src="{{ message.user.profile.first.pfp.url }}" 
                                     alt="Profile Picture" width="32" height="32">
                                 <p class="small mb-0 ms-2">{{ message.user.first_name }} {{ message.user.last_name }}</p>
-                                <p class="small mb-0 ms-2 text-secondary">{{ message.created_at }}</p>
+                                <p class="small mb-0 ms-2 text-muted display-1">{{ message.created_at }}</p>
                             </div>
                         </div>
                     </div>
@@ -51,8 +49,7 @@
                 {% endfor %}
             </div>
             
-            <!-- Pagination Controls -->
-            <div class="container text-center">
+            <div class="container text-center mt-2">
                 <div class="row justify-content-center">
                     <div class="col-auto">
                         <nav aria-label="paginator">
