--- a/root/templates/root/profile/profile.html
+++ b/root/templates/root/profile/profile.html
@@ -66,7 +66,11 @@
     <div class="collapse" id="about">
         <div class="card card-body text-center">
             <h3>About</h3>
-            {{ profile.desc }}
+            {% if profile.desc %}
+                {{ profile.desc }}
+            {% else %}
+                No description yet.
+            {% endif %}
         </div>
     </div>
 
