--- a/root/templates/root/profile/update_profile.html
+++ b/root/templates/root/profile/update_profile.html
@@ -1,4 +1,5 @@
 {% extends "root/base.html" %}
+{% load static %}
 
 
 {% block title %}
@@ -11,9 +12,18 @@
         <p>{{ request.session.success_message }}</p>
     {% endif %}
 
-    <form method="POST" enctype = "multipart/form-data">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class = "btn btn-outline-primary rounded-pill"> <i class="bi bi-upload"></i> Update</button>
-    </form>
+    <div class="container text-center col-xl-10 col-xxl-8 px-4 py-5">
+        <div class="row align-items-center g-lg-5 py-5">
+            <h1 class="display-4 fw-bold mb-1">
+              <img src="{% static 'img/root/root-icon.png' %}" alt="Project Icon" width="30" height="30">
+              Edit Profile
+              <img src="{% static 'img/root/root-icon.png' %}" alt="Project Icon" width="30" height="30" class="me-2">
+            </h1>
+            <form method="POST" class="p-2 p-md-2 border rounded-3">
+              {% csrf_token %}
+              {{ form.as_p }}
+              <button class="w-50 btn btn-lg btn-gradient rounded-pill" type="submit">Edit</button>
+            </form>
+          </div>
+      </div>
 {% endblock content %}
