--- a/root/templates/teacher/add_grade.html
+++ b/root/templates/teacher/add_grade.html
@@ -17,7 +17,7 @@
                 <option value="4">4</option>
                 <option value="5">5</option>
             </select>
-            <button type="submit" class="btn btn-success mt-2">Submit</button>
+            <button type="submit" class="btn btn-gradient rounded-pill mt-2">Submit</button>
           </form>                
         </div>
       </div>
