--- a/tasks/templates/tasks/task.html
+++ b/tasks/templates/tasks/task.html
@@ -1,59 +1,92 @@
 {% extends "root/base.html" %}
 {% load static %}
 
+
 {% block title %}
     <title>ROSEFLOURISH - {{task.name}}</title>
 {% endblock title %}
 
 {% block content %}
-    <div class = "d-flex row justify-content-between">
-        <div class = "col ms-2 mt-2">
-            <h1> 
+<div class="container d-flex justify-content-center text-center">
+    <div class="card shadow-0 border mt-3 col-md-11 col-lg-11" style="background-color: #f0f2f5;">
+        <div class="card-body text-center p-3">
+            <h5 class="text-muted">Task Description</h5>
+            <h1 class="display-6 mb-3 text-muted fs-3"> 
+                {{ task.desc }}
+            </h1>            
+            <a href="{% url 'course' pk=course.pk %}" class="btn btn-secondary rounded-pill">Back to Course</a>
+        </div>  
+    </div>
+</div>
+
+
+<div class = "container d-flex justify-content-between text-center">
+    <div class = "mt-3 me-2 col-md-7 col-lg-8 ms-auto">
+            <div class = "card shadow-0 border" style="background-color: #f0f2f5;">
+                <div class = "card-body text-start p-3">
+            <h1 class="display-6"> 
                 {{ task.name }}
                 {% with task_grade=global_answers|dictsortreversed:"created_at"|first %}
                     {% if task_grade and task_grade.grade_value is not None %}
-                        <span class="badge text-bg-success">{{ task_grade.grade_value }}</span>
+                        <span class="badge bg-secondary rounded-pill">{{ task_grade.grade_value }}</span>
                     {% else %}
                         <span class="badge text-bg-secondary">-</span>
                     {% endif %}
                 {% endwith %}
             </h1>            
-            <p> {{task.desc}}</p>
-            <a href="{% url 'course' pk=course.pk %}" class="btn btn-secondary">Back to Course</a>
+            <p class="text-muted display-3 fs-4">From course: {{ course.name }}</p>
         </div>
+    </div>
+</div>
 
         <div class = "mt-3 me-2 col-md-5 col-lg-4 ms-auto">
             <div class = "card shadow-0 border" style="background-color: #f0f2f5;">
-                <div class = "card-body p-3">
-                    {% for answer in answers %}
-                        {% if answer.media %}
-                            <p><a class="small" href="{{ answer.media.url }}">{{ answer.media.url|truncatechars:10 }}</a></p>
-                        {% else %}
-                            <p>No media attached.</p>
-                        {% endif %}
-                    {% empty %}
-                    <p>No answers yet.</p>
-                    {% endfor %}
-                    <form method="POST" enctype = "multipart/form-data" class="d-flex align-items-center">
+                <div class = "card-body p-3 text-start">
+                    <div class="card-body border rounded text-start overflow-auto" style="max-height: 100px; overflow-x: hidden;">
+                        {% for answer in answers %}
+                            {% if answer.media %}
+                                <span class="display-3 fs-5 badge border mt-1 rounded-pill d-inline-block text-truncate"
+                                      style="max-width: 100%; white-space: normal; word-break: break-word;">
+                                    <a class="small display-3 fs-6" href="{{ answer.media.url }}">
+                                        {{ answer.media.name|cut:"tasks/answers/"|truncatechars:20 }}
+                                    </a>
+                                </span>
+                            {% else %}
+                                <p class="display-3 fs-6 text-muted">No media attached.</p>
+                            {% endif %}
+                        {% empty %}
+                            <p>No answers yet.</p>
+                        {% endfor %}
+                    </div>
+
+                    <form method="POST" enctype = "multipart/form-data" class="d-flex align-items-center mt-3">
+                        <div id="file-preview"></div>
                         {% csrf_token %}
                         <div class="flex-grow-1 mt-3">
                             {{ answers_form.as_p }}
                         </div>
                         <div class="justify-items-center ms-3">
-                            <label for="{{ answers_form.media.id_for_label }}" class="btn btn-primary">
+                            <label for="{{ answers_form.media.id_for_label }}" class="btn btn-outline-primary rounded-pill">
                                 <i class="bi bi-paperclip"></i>
                             </label>
                             {{ answers_form.media }}
+
+                            <label for="submit-btn" class="btn btn-primary rounded-pill ms-1">
+                                <i class="bi bi-send"></i>
+                            </label>
                         </div>
                         <div class = "justify-items-center">
                             {% if user.is_authenticated %}
-                                <button class="btn btn-primary ms-2" type="submit"><i class="bi bi-send"></i></button>
+                                <button id="submit-btn" class="d-none" type="submit"></button>
                             {% else %}
-                                <button class="btn btn-primary ms-2" type="submit" disabled><i class="bi bi-send"></i></button>
+                                <button id="submit-btn" class="d-none" type="submit" disabled></button>
                             {% endif %}
                         </div>
                     </form>
                 </div>
             </div>
         </div>
+    </div>
+
+<script src="{% static "js/tasks/file_preview.js" %}"></script>
 {% endblock content %}
