--- a/courses/templates/courses/course.html
+++ b/courses/templates/courses/course.html
@@ -52,7 +52,7 @@
                 <div class="module-content d-none" id="module-{{ forloop.counter }}"
                 style="transition: margin-left 0.6s ease-in-out;
                         margin-left: 100%;">
-                    <div class="card mb-4">
+                    <div class="card bg-dark mb-4">
                         <div class="card-header bg-dark text-white">
                             <h5 class="mb-0">MODULE {{ forloop.counter }}: {{ module.name }}</h5>
                         </div>
