--- a/root/templates/auth/signup.html
+++ b/root/templates/auth/signup.html
@@ -15,7 +15,7 @@
         <img src="{% static 'img/root/root-icon.png' %}" alt="Project Icon" width="30" height="30" class="me-2">
       </h1>
       <p class="fs-6 text-center">
-        <small class="text-body-secondary">Already have an account? Then, you can <a href='/login/'>login</a>.</small>
+        <small class="text-body-muted">Already have an account? Then, you can <a href='/login/'>login</a>.</small>
       </p>
       <form method="POST" class="p-2 p-md-2 border rounded-3">
         {% csrf_token %}
