--- a/root/templates/comp/navbar.html
+++ b/root/templates/comp/navbar.html
@@ -31,7 +31,7 @@
           </form>
         </div>
       {% else %}
-        <div class="d-flex">
+        <div class="d-flex mt-2 justify-content-center">
           <a class="btn btn-gradient rounded-pill me-2" href="/login/"><i class="bi bi-box-arrow-in-right"></i> Sign In</a>
           <a class="btn btn-gradient rounded-pill" href="/signup/"><i class="bi bi-box-arrow-in-right"></i> Sign Up</a>
         </div>
