--- a/root/templates/root/index.html
+++ b/root/templates/root/index.html
@@ -67,7 +67,7 @@
 <div class = "row">
     <div class="col-md-auto col-lg-auto ms-auto me-auto">
         <div class="card" style="width: 25rem; height: 15rem; position: relative; overflow: hidden;">
-            <div class="card-body text-center align-content-center" style="position: relative; z-index: 1; color: white;">
+            <div class="card-body bg-dark text-center align-content-center" style="position: relative; z-index: 1; color: white;">
                 <h2 class="card-title fs-4 fw-bold"><i class="bi bi-lightbulb"></i> Find an interesting course</h2>
                 <p class="card-text">Find the right course that will give you satisfaction and the necessary knowledge!</p>
             </div>
@@ -76,7 +76,7 @@
 
     <div class="col-md-auto col-lg-auto ms-auto me-auto">
         <div class="card" style="width: 25rem; height: 15rem; position: relative; overflow: hidden;">
-            <div class="card-body text-center align-content-center" style="position: relative; z-index: 1; color: white;">
+            <div class="card-body bg-dark text-center align-content-center" style="position: relative; z-index: 1; color: white;">
                 <h2 class="card-title fs-4 fw-bold"><i class="bi bi-person-video2"></i> Share your problems</h2>
                 <p class="card-text">Ask in the forum. They will definitely help you!</p>
             </div>
@@ -87,8 +87,8 @@
     <div class="col-md-8 p-lg-3 mx-auto my-4 justify-content-center text-center">
         <h1 class="display-3 fw-bold"><b>CHANGELOG</h1>
         
-        <p class="text-muted mb-3">
-            {% include "changelog/w7_250219.html" %}
+        <p class="text-muted display-3 fs-5 mb-3">
+            {% include "changelog/release_250222.html" %}
         </p>
     </div>
 </body>
