--- a/classes/templates/groups/list.html
+++ b/classes/templates/groups/list.html
@@ -22,7 +22,7 @@
         width: 100%;
         height: 100%;
         background: url('{% static "img/root/classes/class-header.jpg" %}') center center/cover no-repeat;
-        filter: brightness(30%); /* Dims the image */
+        filter: brightness(20%); /* Dims the image */
         z-index: -1; /* Places it behind the text content */
         opacity: 0.85; /* Adjust the dimming further if needed */
     }    
@@ -35,7 +35,7 @@
             {% for group in groups %}
                 <div class="col-md-auto col-lg-auto ms-auto me-auto">
                     <div class="card mb-4 overflow-hidden" style="max-height: 400px;">
-                        <div class="card-body position-relative">
+                        <div class="card-body bg-dark position-relative">
                             <h3>
                                 <div class="bg-image rounded-4"></div>
                                 <h1 class="display-1 fs-1">{{ group.name }}
