--- a/root/templates/auth/login.html
+++ b/root/templates/auth/login.html
@@ -7,6 +7,7 @@
 {% endblock %}
 
 {% block content %}
+
 <div class="container text-center col-xl-10 col-xxl-8 px-4 py-5">
   <div class="row align-items-center g-lg-5 py-5">
       <h1 class="display-4 fw-bold mb-1">
@@ -15,9 +16,9 @@
         <img src="{% static 'img/root/root-icon.png' %}" alt="Project Icon" width="30" height="30" class="me-2">
       </h1>
       <p class="fs-6 text-center">
-        <small class="text-body-secondary">Don't have a account? Then, you can <a href='/signup/'>sign up</a>.</small>
+        <small class="text-body-muted">Don't have a account? Then, you can <a href='/signup/'>sign up</a>.</small>
       </p>
-      <form method="POST" class="p-2 p-md-2 border rounded-3">
+      <form method="POST" class="p-2 p-md-2 border rounded-3 text-white">
         {% csrf_token %}
         {{ form.as_p }}
         <button class="w-50 btn btn-lg btn-gradient rounded-pill" type="submit">Login</button>
