--- a/root/templates/root/profile/add_cash.html
+++ b/root/templates/root/profile/add_cash.html
@@ -1,6 +1,6 @@
 <div class="modal fade" id="cashModal" tabindex="-1" aria-labelledby="cashModalLabel" aria-hidden="true">
     <div class="modal-dialog">
-        <div class="modal-content">
+        <div class="modal-content bg-dark">
             <div class="modal-header">
                 <h5 class="modal-title">Add Cash</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
@@ -10,7 +10,7 @@
                     {% csrf_token %}
                     <label for="amount">Amount of cash:</label>
                     <input type="number" name="amount" id="amount" class="form-control" min="0.01" step="0.01" required>
-                    <button type="submit" class="btn btn-primary w-100 mt-3">Pay</button>
+                    <button type="submit" class="btn btn-primary rounded-pill w-100 mt-3">Pay</button>
                 </form>
                 <div id="cash-message" class="mt-2"></div>
             </div>
