--- a/root/templates/teacher/add_grade.html
+++ b/root/templates/teacher/add_grade.html
@@ -1,6 +1,6 @@
 <div class="modal fade" id="gradeModal" tabindex="-1" aria-labelledby="gradeModalLabel" aria-hidden="true">
     <div class="modal-dialog">
-      <div class="modal-content">
+      <div class="modal-content bg-dark">
         <div class="modal-header">
           <h5 class="modal-title" id="gradeModalLabel">Assign Grade</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -10,7 +10,7 @@
             {% csrf_token %}
             <input type="hidden" name="answer_id" id="answerId">
             <label for="grade">Select Grade:</label>
-            <select class="form-select" name="grade">
+            <select class="form-select bg-secondary" name="grade">
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
