--- a/tasks/templates/tasks/task.html
+++ b/tasks/templates/tasks/task.html
@@ -8,9 +8,9 @@
 
 {% block content %}
 <div class="container d-flex justify-content-center text-center">
-    <div class="card shadow-0 border mt-3 col-md-11 col-lg-11" style="background-color: #f0f2f5;">
-        <div class="card-body text-center p-3">
-            <h5 class="text-muted">Task Description</h5>
+    <div class="card shadow-0 border mt-3 col-md-11 col-lg-11" style="background-color: #343a40">
+        <div class="card-body bg-dark text-center p-3">
+            <h5 class="text-white">Task Description</h5>
             <h1 class="display-6 mb-3 text-muted fs-3"> 
                 {{ task.desc }}
             </h1>            
@@ -22,8 +22,8 @@
 
 <div class = "container d-flex justify-content-between text-center">
     <div class = "mt-3 me-2 col-md-7 col-lg-8 ms-auto">
-            <div class = "card shadow-0 border" style="background-color: #f0f2f5;">
-                <div class = "card-body text-start p-3">
+            <div class = "card shadow-0 border">
+                <div class = "card-body bg-dark text-start p-3">
             <h1 class="display-6"> 
                 {{ task.name }}
                 {% with task_grade=global_answers|dictsortreversed:"created_at"|first %}
@@ -41,7 +41,7 @@
 
         <div class = "mt-3 me-2 col-md-5 col-lg-4 ms-auto">
             <div class = "card shadow-0 border" style="background-color: #f0f2f5;">
-                <div class = "card-body p-3 text-start">
+                <div class = "card-body bg-dark p-3 text-start">
                     <div class="card-body border rounded text-start overflow-auto" style="max-height: 100px; overflow-x: hidden;">
                         {% for answer in answers %}
                             {% if answer.media %}
