hotfix update profile

--- a/root/templates/changelog/release_250222.html
+++ b/root/templates/changelog/release_250222.html
@@ -1,4 +1,4 @@
-VERSION: ReleaseV1_250222</br>
+VERSION: ReleaseV1_250222_2</br>
 - Hosted by Render;</br>
 - Finished project;</br>
-- Design style fixed.</br>
+- Update profile fixed.</br>
