--- a/root/templates/comp/footer.html
+++ b/root/templates/comp/footer.html
@@ -4,7 +4,7 @@
       <hr class="border border-muted">
       <p class="text-start text-body-muted display-6 fs-6">
         <b>ROSEFLOURISH</b> <br>
-        <small style="font-size: 12px">&copy; All rights reserved • Sawada • release_v1_250222 • Render Hosting
+        <small style="font-size: 12px">&copy; All rights reserved • Sawada • V1.250301 • Render Hosting
         </small> <br>
         <img src="{% static 'img/bs/bootstrap-ico.png' %}" alt="Bootstrap Icon" width="25" class = "me-2" height="20" style="filter: grayscale(100%);">
         <img src="{% static 'img/dj/django-ico.png' %}" alt="Django Icon" width="15" height="20" style="filter: grayscale(100%);">
