--- a/root/templates/root/index.html
+++ b/root/templates/root/index.html
@@ -88,7 +88,7 @@
         <h1 class="display-3 fw-bold"><b>CHANGELOG</h1>
         
         <p class="text-muted display-3 fs-5 mb-3">
-            {% include "changelog/release_250222.html" %}
+            {% include "changelog/v1_250301.html" %}
         </p>
     </div>
 </body>
